Support for showing logs of hits per page per day
--HG--
extra : convert_revision : svn%3Ac6461f93-7114-0410-893d-dbe9e6e34e10/trunk%402

--- a/core/.htaccess
+++ b/core/.htaccess
@@ -16,6 +16,9 @@
 <IfModule mod_rewrite.c>
 	RewriteEngine On
 	RewriteRule ^page/sitemap index.php?action=sitemap
+	#RewriteRule ^page/viewlog/([^/]+)/([^/]+)/([^/]+)/ index.php?action=viewlog&logaction=$1&offset=$2&date=$3
+	RewriteRule ^page/viewlog/hitsperdate/([^/]+)/([^/]+)/ index.php?action=viewlog&logaction=hitsperdate&date=$1&offset=$2
+	RewriteRule ^page/viewlog/hitsperdate/([^/]+)/ index.php?action=viewlog&logaction=hitsperdate&date=$1
 	RewriteRule ^page/viewlog/([^/]+)/([^/]+) index.php?action=viewlog&logaction=$1&offset=$2
 	RewriteRule ^page/viewlog/([^/]+)/ index.php?action=viewlog&logaction=$1
 	RewriteRule ^page/viewlog index.php?action=viewlog
