20060918 - Added support for thumbnails - Made gallery use thumbnails by default - Added image.php for generating thumbnails on the fly - Additions to .htaccess for using clean uri's when calling image.php
--HG--
extra : convert_revision : svn%3Ac6461f93-7114-0410-893d-dbe9e6e34e10/trunk%4012

--- a/core/.htaccess
+++ b/core/.htaccess
@@ -22,6 +22,8 @@
 	RewriteRule ^page/viewlog/([^/]+)/([^/]+) index.php?action=viewlog&logaction=$1&offset=$2
 	RewriteRule ^page/viewlog/([^/]+)/ index.php?action=viewlog&logaction=$1
 	RewriteRule ^page/viewlog index.php?action=viewlog
+	RewriteRule ^viewimage/thumb/(.*) image.php?action=makethumb&filename=$1
+	RewriteRule ^viewimage/gallery/thumb/(.*) image.php?action=makethumb&kind=gallery&filename=$1
 	#RewriteRule ^page/([A-z0-9]+)/([A-z0-9]+) index.php?section=$1&page=$2
 	RewriteRule ^page/([^/]+)/([^/]+) index.php?section=$1&page=$2
 	#RewriteRule ^page/([A-z0-9]+) index.php?section=$1
