- Modified release script so it packages two nice tarballs [normal and multilingual] - Cleaned up and fixed .htaccess files for core and multilingual
--HG--
extra : convert_revision : svn%3Ac6461f93-7114-0410-893d-dbe9e6e34e10/trunk%4017

--- a/example_multilingual/.htaccess
+++ b/example_multilingual/.htaccess
@@ -15,23 +15,19 @@
 
 <IfModule mod_rewrite.c>
 	RewriteEngine On
-#	RewriteRule ^page/sitemap index.php?action=sitemap
 	RewriteRule ^page/([^/]+)/sitemap index.php?action=sitemap&language=$1
-	#RewriteRule ^page/error/([^/]+)/ ^page/en/error/$1/
+	# Added multilanguage support:
 	RewriteRule ^page/error/([^/]+)/ index.php?section=error&page=$1&language=en
 	RewriteRule ^page/viewlog/hitsperdate/([^/]+)/([^/]+)/ index.php?action=viewlog&logaction=hitsperdate&date=$1&offset=$2
 	RewriteRule ^page/viewlog/hitsperdate/([^/]+)/ index.php?action=viewlog&logaction=hitsperdate&date=$1
 	RewriteRule ^page/viewlog/([^/]+)/([^/]+) index.php?action=viewlog&logaction=$1&offset=$2
 	RewriteRule ^page/viewlog/([^/]+)/ index.php?action=viewlog&logaction=$1
 	RewriteRule ^page/viewlog index.php?action=viewlog
-#	RewriteRule ^page/([^/]+)/([^/]+) index.php?section=$1&page=$2
-	RewriteRule ^page/([^/]+)/([^/]+)/([^/]+) index.php?section=$2&page=$3&language=$3
-#	RewriteRule ^page/([^/]+) index.php?section=$1
+	# Thumbnail stuff:
+	RewriteRule ^viewimage/thumb/(.*) image.php?action=makethumb&filename=$1
+	RewriteRule ^viewimage/gallery/thumb/([^/]+)/([0-9]+)/ index.php?action=makethumb&kind=gallery&gallery=$1&file=$2
+	# Multilingual specific:
+	RewriteRule ^page/([^/]+)/([^/]+)/([^/]+) index.php?section=$2&page=$3&language=$1
 	RewriteRule ^page/([^/]+)/([^/]+) index.php?section=$2&language=$1
+
 </IfModule>
-
-ErrorDocument 401 /page/error/401/
-ErrorDocument 403 /page/error/403/
-ErrorDocument 404 /page/error/404/
-ErrorDocument 500 /page/error/500/
-
