--- a/core/.htaccess
+++ b/core/.htaccess
@@ -16,19 +16,14 @@
 <IfModule mod_rewrite.c>
 	RewriteEngine On
 	RewriteRule ^page/sitemap index.php?action=sitemap
-	#RewriteRule ^page/viewlog/([^/]+)/([^/]+)/([^/]+)/ index.php?action=viewlog&logaction=$1&offset=$2&date=$3
+	RewriteRule ^page/error/([^/]+)/ index.php?section=error&page=$1
 	RewriteRule ^page/viewlog/hitsperdate/([^/]+)/([^/]+)/ index.php?action=viewlog&logaction=hitsperdate&date=$1&offset=$2
 	RewriteRule ^page/viewlog/hitsperdate/([^/]+)/ index.php?action=viewlog&logaction=hitsperdate&date=$1
 	RewriteRule ^page/viewlog/([^/]+)/([^/]+) index.php?action=viewlog&logaction=$1&offset=$2
 	RewriteRule ^page/viewlog/([^/]+)/ index.php?action=viewlog&logaction=$1
 	RewriteRule ^page/viewlog index.php?action=viewlog
 	RewriteRule ^viewimage/thumb/(.*) image.php?action=makethumb&filename=$1
-	#RewriteRule ^viewimage/gallery/thumb/(.*) image.php?action=makethumb&kind=gallery&filename=$1
-	#RewriteRule ^viewimage/gallery/thumb/([^/]+)/([0-9]+)/ image.php?action=makethumb&kind=gallery&gallery=$1&file=$2
 	RewriteRule ^viewimage/gallery/thumb/([^/]+)/([0-9]+)/ index.php?action=makethumb&kind=gallery&gallery=$1&file=$2
-	#RewriteRule ^viewimage/gallery/browse/([^/]+)/([^/]+)/ index.php?action=browsegallery&gallery=$1&image=$2
-	#RewriteRule ^page/([A-z0-9]+)/([A-z0-9]+) index.php?section=$1&page=$2
 	RewriteRule ^page/([^/]+)/([^/]+) index.php?section=$1&page=$2
-	#RewriteRule ^page/([A-z0-9]+) index.php?section=$1
 	RewriteRule ^page/([^/]+) index.php?section=$1
 </IfModule>
